# podcast-transcriber

./: .env.template  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
scripts/: accuracy.py
src/podcast_transcriber/: __init__.py  downloader.py  spotify.py  tester.py  transcript.py
