[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-transcriber"
version = "0.1.0"
description = "A Python library for transcribing Spotify podcasts and exporting transcripts to TXT files."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "podcast-transcriber contributors" }]
keywords = ["podcast", "transcription", "spotify"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
